Fix z-index in header

--- a/src/css/partials/main-menu.scss
+++ b/src/css/partials/main-menu.scss
@@ -136,7 +136,9 @@
 .adaptive-menu__list-inner li a {
   padding-left: 30px !important;
 }
-
+.mdl-layout__header {
+  z-index: 200;
+}
 
 /*--- Adaptive ---*/
 @media screen and (max-width: 1500px) {
